[package]
name = "waze-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.1"
env_logger = "0.11.6"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.11"
mockito = "1.6.1"
serde_derive = "1.0.217"



