[package]
name = "waze-rs"
version = "0.1.1"
authors = ["Baget"]
edition = "2021"
license = "GPL-3.0-only"
description = "Calculate actual route time and distance with Waze API"
readme = "README.md"
repository = "https://github.com/baget/waze-rs"
documentation = "https://docs.rs/waze-rs"
keywords = ["waze", "rust"]
exclude = [
    ".github/*",
]


[dev-dependencies]
pretty_assertions = "1.4.1"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.11"
mockito = "1.6.1"
serde_derive = "1.0.217"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"



